(executable
 (name print_parts)
 (modules print_parts)
 (libraries http-multipart-formdata reparse reparse-lwt lwt lwt.unix)
 (preprocess
  (pps ppx_deriving.show ppx_expect)))

(executable
 (name multipart_httpaf)
 (modules multipart_httpaf)
 (libraries
  http-multipart-formdata
  reparse
  reparse-lwt
  lwt
  lwt.unix
  httpaf
  httpaf-lwt-unix)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord)))
